--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,8 @@
 @import './watchlist.css';
 @import './modal.css';
 @import './animeDetails.css';
+@import './aboutUs.css';
+@import './contactUs.css';
 
 /* Responsive Design */
 @import './responsive.css';
