--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -163,6 +163,17 @@
     background-color: #252727;
 }
 
+.button-submit:disabled {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
+.button-submit:disabled:hover {
+    background-color: #cccccc;
+}
+
 .p {
     text-align: center;
     color: black;
